[package]
name = "crowd-funding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.0"
cw-storage-plus = "0.13.4"
cosmwasm-schema = "1.1.0"
thiserror = "1.0.31"
cw-utils = "0.13.4"